--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
 }
 
 header {
-  background: linear-gradient();
+  background: rgb(15, 15, 214);
+  background: linear-gradient(45deg, rgb(15, 15, 214) 0%, rgb(5, 1, 32) 60%);
   display: block;
   max-width: 100%;
-  max-height: 100vh;
+  max-height: 20vh;
   font-size: 50px;
   border: 1px black solid;
 }
